// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should render Text with center textAlign 1`] = `
.c0 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

<div>
  <p
    class="c0 Text__StyledText-wkh56f-0"
    color="surface.text.normal.lowContrast"
    data-blade-component="text"
    font-family="text"
    font-size="100"
    font-style="normal"
    font-weight="regular"
  >
    Displaying some text
  </p>
</div>
`;

exports[`<Text /> should render Text with default properties 1`] = `
.c0 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  margin: 0;
  padding: 0;
}

<div>
  <p
    class="c0 Text__StyledText-wkh56f-0"
    color="surface.text.normal.lowContrast"
    data-blade-component="text"
    font-family="text"
    font-size="100"
    font-style="normal"
    font-weight="regular"
  >
    Displaying some text
  </p>
</div>
`;

exports[`<Text /> should render Text with variant "body" 1`] = `
.c0 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  margin: 0;
  padding: 0;
}

.c1 {
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 3;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
}

<div>
  <p
    class="c0 c1"
    color="surface.text.normal.lowContrast"
    data-blade-component="text"
    font-family="text"
    font-size="100"
    font-style="normal"
    font-weight="bold"
  >
    Displaying some text
  </p>
</div>
`;

exports[`<Text /> should render Text with variant "body" and contrast "high" 1`] = `
.c0 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  margin: 0;
  padding: 0;
}

.c1 {
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 3;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
}

<div>
  <p
    class="c0 c1"
    color="surface.text.normal.highContrast"
    data-blade-component="text"
    font-family="text"
    font-size="100"
    font-style="normal"
    font-weight="bold"
  >
    Displaying some text
  </p>
</div>
`;

exports[`<Text /> should render Text with variant "body" and size "small" 1`] = `
.c0 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c1 {
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 3;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
}

<div>
  <p
    class="c0 c1"
    color="surface.text.normal.lowContrast"
    data-blade-component="text"
    font-family="text"
    font-size="75"
    font-style="normal"
    font-weight="bold"
  >
    Displaying some text
  </p>
</div>
`;

exports[`<Text /> should render Text with variant "caption" 1`] = `
.c0 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  margin: 0;
  padding: 0;
}

<div>
  <p
    class="c0 Text__StyledText-wkh56f-0"
    color="surface.text.normal.lowContrast"
    data-blade-component="text"
    font-family="text"
    font-size="100"
    font-style="normal"
    font-weight="bold"
  >
    Displaying some text
  </p>
</div>
`;
